# reading-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: test_pds.py
data/: reading-data.xlsx
