[project]
name = "reading-analysis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "et-xmlfile==2.0.0",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "narwhals==2.16.0",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.0",
    "pillow==12.1.1",
    "plotly==6.5.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]
